# save-load

./: .gitattributes  AGENTS.md  AGENTS.ts  CHANGELOG.md  Cargo.toml  README.md  README.ts  fnox.toml  lefthook.yml  mise.toml
.agents/: cli.md  concepts.md  error-handling.md  general.md  knowledge.md  spec.md
.github/workflows/: ci.yml
specs/: refactor-crate.md
src/: errors.rs  format.rs  formats.rs  functions.rs  lib.rs  traits.rs
src/errors/: deserialize_error.rs  deserialize_many_error.rs  deserialize_one_error.rs  item_not_found_error.rs  load_as_error.rs  load_error.rs  load_many_as_error.rs  load_many_error.rs  load_one_as_error.rs  load_one_error.rs  path_has_no_extension_error.rs  record_not_found_error.rs  save_as_error.rs  save_error.rs  save_one_as_error.rs  save_one_error.rs  serialize_error.rs  serialize_many_error.rs  serialize_one_error.rs  try_from_path_error.rs  unrecognized_extension_error.rs  unsupported_format_error.rs
src/formats/: csv.rs  json.rs  xml.rs
src/functions/: deserialize.rs  load.rs  save.rs  serialize.rs
src/traits/: file_to_iter.rs  file_to_iter_of_results.rs  file_to_iterator.rs  file_to_iterator_of_results.rs  iter_to_file.rs  iterator_to_file.rs
