[package]
name = "save-load"
version = "0.1.0"
edition = "2021"
description = "Read & write files in JSON, YAML, XML, and TOML formats."
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/save-load"
repository = "https://github.com/DenisGorbachev/save-load"
readme = "README.md"
keywords = ["serde", "filesystem", "fs", "serialize", "format"]
categories = ["filesystem", "rendering::data-formats", "value-formatting", "encoding", "rust-patterns"]

[package.metadata.details]
title = "Read & write files in JSON, YAML, XML, and TOML formats"
tagline = ""
summary = ""
announcement = ""
readme = { generate = false }

[dependencies]
clap = { version = "4.0.0", optional = true, features = ["derive"] }
csv = { version = "1.3.0", optional = true }
derive_more = { version = "1.0.0", features = ["full"] }
quick-xml = { version = "0.36.0", optional = true, features = ["serialize"] }
serde = { version = "1.0.0", features = ["derive"] }
serde-jsonlines = { version = "0.6.0", optional = true }
serde-xml-rs = { version = "0.6.0", optional = true }
serde_json = { version = "1.0.0", optional = true }
serde_yaml = { version = "0.9.0", optional = true }
strum = { version = "0.27.0", features = ["derive"] }
toml = { version = "0.9.0", optional = true }
